Bugfix: fixed the left padding of collapsed admin stack node headings

--- a/woost/admin/ui/resources/styles/woost-admin-ui-itemcard.scss
+++ b/woost/admin/ui/resources/styles/woost-admin-ui-itemcard.scss
@@ -52,12 +52,14 @@ $icon-height: $card-height - $icon-padding * 2;
 
 @mixin collapsed-icon {
     padding: 0;
+    --width: 0;
     --height: 0;
     opacity: 0;
 }
 
 @keyframes collapseIcon {
     from {
+        --width: #{$icon-height};
         --height: #{$icon-height};
         padding: $icon-padding;
         opacity: 1;
